# corvo-lang

./: AGENTS.md  CHEATSHEET.md  Cargo.toml  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  INCONSISTENCIES.md  README.md  corvo.md  install.sh  opencode.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
coreutils/: b2sum.corvo  base32.corvo  base64.corvo  basenc.corvo  cat.corvo  cksum.corvo  cp.corvo  cut.corvo  date.corvo  head.corvo  ls.corvo  mkdir.corvo  rm.corvo  rmdir.corvo  tail.corvo  uptime.corvo  wc.corvo
coreutils/tests/: Dockerfile  helpers.sh  run-parity-matrix.sh  run-parity.sh
examples/: args.corvo  async_browse.corvo  browse.corvo  coreutils_ls.corvo  crypto_example.corvo  csv_example.corvo  data_structures.corvo  dns_example.corvo  env_example.corvo  error_handling.corvo  fs_example.corvo  hcl_example.corvo  hello.corvo  http_example.corvo  json_example.corvo  list_methods.corvo  llm_example.corvo  loop.corvo  map_methods.corvo  match.corvo  math_example.corvo  new_collections.corvo  notifications_example.corvo  number_methods.corvo  or_assign.corvo  os_example.corvo  prep_api.corvo  prep_env.corvo  regex.corvo  shorthands.corvo  slicing.corvo  string_methods.corvo  sys_example.corvo  template_example.corvo  variables.corvo  xml_example.corvo  yaml_example.corvo
src/: diagnostic.rs  error.rs  lib.rs  main.rs
src/ast/: expr.rs  mod.rs  stmt.rs
src/compiler/: builder.rs  evaluator.rs
src/lexer/: token.rs  tokenizer.rs
src/parser/: recursive_descent.rs
src/repl/: mod.rs
src/runtime/: state.rs
src/standard_lib/: args.rs  crypto.rs  env.rs  fs.rs  (+7 more)
tests/: coreutils_test.rs  integration_test.rs
(+38 files in other folders)
